tracking layout issues

--- a/src/assets/styles/layouts/_wrapper.scss
+++ b/src/assets/styles/layouts/_wrapper.scss
@@ -1,7 +1,5 @@
 .wrapper {
-    display: flex;
-    max-height: 100vh;
-    max-width: 100vw;
+
     margin: 0px;
     padding: 0px;
 
